// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-navigation-item should render with aria-label: renders-with-aria-label 1`] = `
<ic-navigation-item aria-label="navigation item description" class="light navigation-item" href="#link" label="Item label" role="listitem">
  <mock:shadow-root>
    <ic-tooltip class="tooltip-navigation-item" label="Item label" placement="right" target="navigation-item">
      <a aria-label="navigation item description" class="link" href="#link" part="link">
        <ic-typography variant="label">
          Item label
        </ic-typography>
        <div class="chevron-container"></div>
      </a>
    </ic-tooltip>
  </mock:shadow-root>
</ic-navigation-item>
`;

exports[`ic-navigation-item should render with aria-label: renders-with-new-aria-label 1`] = `
<ic-navigation-item aria-label="New item description" class="light navigation-item" href="#link" label="Item label" role="listitem">
  <mock:shadow-root>
    <ic-tooltip class="tooltip-navigation-item" label="Item label" placement="right" target="navigation-item">
      <a aria-label="New item description" class="link" href="#link" part="link">
        <ic-typography variant="label">
          Item label
        </ic-typography>
        <div class="chevron-container"></div>
      </a>
    </ic-tooltip>
  </mock:shadow-root>
</ic-navigation-item>
`;

exports[`ic-navigation-item should render with label: renders-with-label 1`] = `
<ic-navigation-item class="light navigation-item" label="Item label" role="listitem">
  <mock:shadow-root>
    <ic-tooltip class="tooltip-navigation-item" label="Item label" placement="right" target="navigation-item">
      <div class="link" tabindex="0">
        <ic-typography variant="label">
          Item label
        </ic-typography>
      </div>
    </ic-tooltip>
  </mock:shadow-root>
</ic-navigation-item>
`;
